# EasIlastik

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
EasIlastik/: __init__.py  find_ilastik.py  run_ilastik.py  utils.py
Examples/: example-notebook.ipynb
easilastik/: __init__.py  run_ilastik.py
tests/: color_treshold_probabilities_test.py  find_ilastik_test.py  process_single_file_test.py  run_ilastik_probabilities_test.py  run_ilastik_test.py  treshold_probabilities_test.py  utils_test.py
